--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samettyldrm.github.io/havadurumu",
+  "homepage": "https://samettyldrm.github.io/weatherApp",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
